--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "flow": "^0.2.3",
     "flow-cli": "^0.0.0-pre",
     "react": "16.8.3",
-    "react-native": "0.59.5"
+    "react-native": "0.59.5",
+    "react-native-audio-toolkit": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/runtime": "^7.4.3",
+    "@babel/preset-flow": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-jest": "^24.7.1",
-    "babel-preset-flow": "^6.23.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.12.4",
     "flow-bin": "^0.97.0",
