--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "flow-cli": "^0.0.0-pre",
     "react": "16.8.3",
     "react-native": "0.59.5",
-    "react-native-audio-toolkit": "^1.0.6"
+    "react-native-audio-toolkit": "^1.0.6",
+    "tonal": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
-    "@babel/runtime": "^7.4.3",
     "@babel/preset-flow": "^7.0.0",
+    "@babel/runtime": "^7.4.3",
     "babel-cli": "^6.26.0",
     "babel-jest": "^24.7.1",
     "eslint": "^5.16.0",
@@ -26,6 +27,7 @@
     "flow-bin": "^0.97.0",
     "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.53.1",
+    "midi-writer-js": "^1.7.1",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
