--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,6 @@
         "flowtype"
     ],
     "rules": {
+        "no-unused-vars": ["error", {"args": "after-used", "argsIgnorePattern": "^_", "ignoreRestSiblings": true}]
     }
 }
